@@ -145,7 +145,7 @@ def main(args):
 	global time_of_last_run
 	time_of_last_run = time.time()
 
-	print("We will be using a max of %s threads, a queue of %s and grabbing %s headers" % (run_threads, "{:,}".format(geteach), "{:,}".format(geteach * maxmssgs)))
+	print("We will be using a max of %s threads, a queue of %s and grabbing %s headers" % (run_threads, "{:,}".format(geteach), "{:,}".format(geteach * maxmssgs + 1000)))
 	time.sleep(2)
 
 	def signal_handler(signal, frame):
@@ -164,7 +164,7 @@ def main(args):
 
 	my_queue.join()
 
-	final = ("%s %d %s" % (datas[0], int(datas[1] - (maxmssgs * geteach)), geteach))
+	final = ("%s %d Backfill" % (datas[0], int(datas[1] - (maxmssgs * geteach))))
 	subprocess.call(["php", pathname+"/../nix_scripts/tmux/bin/backfill_safe.php", ""+str(final)])
 	group = ("%s %d" % (datas[0], 1000))
 	subprocess.call(["php", pathname+"/../nix_scripts/tmux/bin/backfill_safe.php", ""+str(group)])
